# Integracion_interbankingMP_BD

./: .gitignore  CLAUDE.md  README.md  build_shared_wheel.ps1  main_interactive.py  pyproject.toml  requirements.txt  unified_finance_sync.env.example  unified_finance_sync.service  unified_finance_sync_service.py
docs/: DEPLOY.md  OBSERVABILITY.md  PROYECTO.md
ib_poller/: .funcignore  function_app.py  host.json  ib_processor.py  local.settings.json.example  requirements.txt
infra/: 00-prereqs.ps1  10-create-foundation.ps1  20-create-sql.ps1  30-create-function-mp.ps1  40-create-function-ib.ps1  50-load-secrets.ps1  60-deploy-code.ps1  70-create-queue.ps1  80-create-alerts.ps1  99-teardown.ps1  README.md  _config.ps1
mp_webhook_function/: function_app.py  host.json  local.settings.json.example  mp_client.py  mp_processor.py  requirements.txt
script/: backfill_mp_payments.py  create_db_user.sql  dev_reset_data.sql  migration_002_widen_text_columns.sql  migration_003_add_complete_ib_columns.sql  migration_004_add_movement_source.sql  migration_005_backfill_movement_source.sql  unified_finance_schema.sql  unified_finance_schema_security_v2.sql
shared/: README.md  __init__.py  azure_secrets.py  config.py  db_helpers.py  interbanking_client.py  observability.py  secret_string.py
tests/: conftest.py  test_azure_secrets.py  test_config.py  test_config_modular.py  test_database_pool.py  test_db_helpers.py  test_ib_movements_dia.py  test_interbanking_client.py  test_mp_client.py  test_mp_poller.py  test_observability.py  test_secret_string.py
